[package]
name = "splice-test"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.12.12"
orca_whirlpools_client = "2.0.2"
serde = { version = "1", features = ["derive"]}
serde_json = "1.0"
anyhow = "1.0.96"
solana-client = "2.2.0"
solana-sdk = "2.2.1"
orca_whirlpools = "2.0.1"
spl-token = "7.0.0"
dotenvy = "0.15.7"
